# jpg_mpp_vnc_server

./: .gitignore  CMakeLists.txt  jpeg-server.c  jpegset.h  mjpeg-server.c  readme.md
libs/: CMakeLists.txt
libs/jpgfb_mpp/: CMakeLists.txt  get_img_size.c  get_img_size.h  jpgfb_mpp.c
libs/rga_bridge/: CMakeLists.txt  rga_bridge.cpp  rga_bridge.h  rga_bridge_wrapper.cpp  rga_bridge_wrapper.h
